<resources>
    <string name="app_name">SuparV2Exnerdjo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="logInDescription">Bitte gib deinen Benutzernamen und dein Passwort ein.</string>
    <string name="weiter">Weiter</string>
    <string name="benutzername">Benutzername</string>
    <string name="emptyString"></string>
    <string name="serviceHeadline">Leistungskatalog</string>

    <string name="ganzwaschung">Ganzwaschung</string>
    <string name="ganzwaschungDescription">1. Waschen, Duschen, Baden\n
        2. Mund-, Zahn- und Lippenpflege\n
        3. Rasieren\n
        4. Hautpflege\n
        5. Haarpflege (Kämmen, ggf. Waschen)\n
        6. Nagelpflege\n
        7. An- und Auskleiden incl. An- und Ablegen von Körperersatzstücken\n
        8. Vorbereiten/Aufräumen des Pflegebereiches</string>
    <string name="teilwaschung">Teilwaschung</string>
    <string name="teilwaschungDescription">1. Teilwaschung (z.B. Intimbereich)\n
        2. Mund-, Zahn- und Lippenpflege\n
        3. Rasieren\n4. Hautpflege\n
        5 .Haarpflege (Kämmen, ggf. Waschen)\n
        6. Nagelpflege\n
        7. An- und Auskleiden incl. An- und Ablegen von Körperersatzstücken\n
        8. Vorbereiten/Aufräumen des Pflegebereiches</string>
    <string name="ausscheidungen">Ausscheidungen</string>
    <string name="ausscheidungenDescription">1.Utensilien bereitstellen, anreichen\n
        2.zur Toilette führen\n
        3. Unterstützung u. allgem. Hilfestellung (Urin, Stuhl, Schweiß, Sputum, Erbrochenes)\n
        4. Überwachung der Ausscheidung\n5. Entsorgen, Reinigen des Gerätes und des Bettes\n
        6. Katheterpflege (insb. Wechseln von Urinbeuteln), Stomaversorgung bei Anus praeter (Wechsel u. Entleerung des Stomabeutels)\n
        7.Empfehlung zum Kontinenztraining/Inkontinenzversorgung\n8. Nachbereiten des Pflegebedürftigen ggf. Intimpflege</string>
    <string name="nahr">Selbstständige Nahrungsaufnahme</string>
    <string name="nahrDescription">1. Mundgerechtes Vorbereiten der Nahrung (auch angelieferte Warmspeisen)\n
        2. Lagern und Vorbereiten des Pflegebedürftigen\n
        3. Entsorgen der benötigten Materialien\n
        4. Säubern des Arbeitsbereiches\n
        5. Kenntnisvermittlung (keine Ernährungsberatung) über richtige Ernährung (z.B. Diabetiker) ausreichende Flüssigkeitszufuhr incl. Beratung über Esshilfe</string>
    <string name="hNahr">Hilfe bei der Nahrungsaufnahme</string>
    <string name="hNahrDesc">1. Mundgerechtes Vorbereiten der Nahrung (auch angelieferte Warmspeisen)\n
        2. Lagern und Vorbereiten des Pflegebedürftigen\n
        3. Darreichen der Nahrung\n
        4. Entsorgen der benötigten Materialien\n
        5. Säubern des Arbeitsbereiches (spülen)\n
        6. Versorgung des Pflegebedürftigen (Hygiene im Zusammenhang mit der Nahrungsaufnahme)\n
        7. Kenntnisvermittlung (keine Ernährungsberatung) über richtige Ernährung (z.B. Diabetiker) ausreichende Flüssigkeitszufuhr incl. Beratung über Esshilfe</string>
    <string name="lagBet">Lagern/Betten</string>
    <string name="lagBetDesc">1.Richten des Bettes\n
        2. Wechseln der Bettwäsche\n
        3.  Körper- und situationsgerechtes Lagern\n
        4.  Vermittlung von Lagerungstechniken ggf. Einsatz von Lagerungshilfen</string>

    <!-- Menu-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client">Klienten</string>
    <string name="basic_data">Stammdaten</string>
    <string name="calendar">Kalender</string>
    <string name="vital_value">Vitalwerte</string>
    <string name="logout">Abmelden</string>

    <!--Basic Data -->
    <string name="clientfirstname">Helga</string>
    <string name="clientlastname">Stein</string>
    <string name="clientAddress">Rotsteinweg 21A</string>
    <string name="postalcCode">1457 Berlin</string>
    <string name="clientBirthdate">14.04.1958</string>
    <string name="careLevel">2</string>
    <string name="fam1">Arnold Stein</string>
    <string name="fam2">Helene Stein</string>
    <string name="telephonenumber">015123456</string>
    <string name="telephonenumber2">017123456</string>
    <string name="infodump">Schwerhörig.
    Trinkt gerne Tee. Redet gerne über Formel 1.</string>
    <string name="concerns">test</string>
    <string name="clientmartial_status">ledig</string>
    <string name="clientcitizenship">Deutsch</string>
    <string name="clientlivingcon">lebt allein</string>
    <string name="healthinsurance">Techniker Krankenkasse</string>
    <string name="insurancenumber">5492854</string>
    <string name="clientdoctor">Gert Witter</string>
    <string name="clientdoctelnumber">82483037</string>
    


    <!-- Logbook search bar -->
    <string name="search_bar">search bar filler</string>
    <string name="title_activity_main2">Main2Activity</string>


    <!-- Wound Documentation-->
    <string name="wounddate">Datum</string>
    <string name="woundphase">Wundphase</string>
    <string name="woundsizel">Wunddlänge</string>
    <string name="woundsizew">Wundbraite</string>
    <string name="woundsized">Wundtiefe</string>
    <string name="wounddescription">Wundbeschreibung</string>
    <string name="woundkindfrequency">Art und Häufigkeit der Wundversorgung</string>
    <string name="hdz">Hdz</string>
    <string name="addRow">Zeile hinzufügen</string>
    <string name="saveContent">Speichern</string>

    <string name="wounddocname">Wunddokumentation</string>
    <string name="mobdocname">Mobilisations Lagerungsplan</string>
    <string name="mobdate">Datum</string>
    <string name="mobdestination">Mobilisierungsziel</string>
    <string name="mobMeasures">Mobilisierungsmaßnahmen</string>
    <string name="mobcharacteristics">Besonderheiten</string>;
    <string name="mobtime">Uhrpunkt</string>

    <string name="doctorialprescription1">Ärztlich Verordnung 1 Verbandswechsel etc.</string>
    <string name="doctorialprescription2">Ärztlich Verordnung 2 Injektion Infusion</string>
    <string name="doctorialprescription3">Ärztlich Verordnung 3 Sonderkost parenterale Ernährung</string>
    <string name="doctpre1hdz">Hdz. Pflege</string>
    <string name="doctorname">Arztname</string>
    <string name="doctorialmeasure">ärztlich verordnete Maßnahme</string>
    <string name="frequency">Häufigkeit</string>
    <string name="dochdz">Hdz. Arzt</string>
    <string name="endon">abgesetzt am</string>
    <string name="injec_infu">Injektion/Infusion</string>
    <string name="specialdiet">Verabreichung von Sondenkost / enterale Ernährung </string>

    <string name="addPicture">hinzufügen</string>
    <string name="picture">Bild</string>

    <!-- Add note alert -->
    <string name="dialog_add_note_title">Neue Notiz</string>
    <string name="cancel">Abbrechen</string>
    <string name="confirm">Bestätigen</string>
    <string name="carer_name_fill">Carer Name Filler</string>

    <string name="tag">Stichwort</string>
    <string name="input_tags">Geben Sie Stichwörter ein</string>
    <string name="note_comment">Kommentar...</string>


</resources>
